Incorporate feedback for function template guides

--- a/docs/guides/function-template-chemistry-workflow.ipynb
+++ b/docs/guides/function-template-chemistry-workflow.ipynb
@@ -5,9 +5,9 @@
    "id": "8cfa587b",
    "metadata": {},
    "source": [
-    "# Deploy and Run the SQD IEF-PCM Function Template\n",
+    "# Deploy and run a template for electronic structure simulation with an implicit solvent model\n",
     "\n",
-    "{/* cspell:ignore pvdz, fcisolver, avas, ncas, nelecas, ecore, chkfile, fcivec, hcore, ncore, myci, sqdvec, myeps, mymethod, mysolvmethod, myavas, mcscf, MCSCF, chkfile}"
+    "{/* cspell:ignore pvdz, fcisolver, avas, ncas, nelecas, ecore, chkfile, fcivec, hcore, ncore, myci, sqdvec, myeps, mymethod, mysolvmethod, myavas, mcscf, MCSCF, chkfile */}"
    ]
   },
   {
@@ -22,38 +22,38 @@
   },
   {
    "cell_type": "markdown",
-   "id": "01bdd609",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "id": "f3a337d1",
+   "metadata": {},
    "source": [
-    "This interactive guide shows how to upload the SQD IEF-PCM function template to Qiskit Serverless and run an example workload. The template is composed of three sections described below:\n",
-    "\n",
-    "1. Input section\n",
-    "\n",
-    "This section takes as an input the geometry of the molecule, selected active space, solvation model, LUCJ options, and SQD options. Subsequently it produces the PySCF Checkpoint file which contains the Hartree-Fock (HF) IEF-PCM data. This data will be used in the SQD portion of the workflow. For LUCJ portion of the workflow the input section also generates the gas-phase HF data which is stored internally in PySCF FCIDUMP format.\n",
-    "\n",
-    "2. LUCJ section\n",
-    "\n",
-    "It takes as the input the information from the HF gas-phase simulation as well as the definition of the active space. Importantly, it also utilizes the user-defined information from the input section concerning the error suppression, number of shots, circuit transpiler optimization level, and the qubit layout.\n",
-    "\n",
-    "It generates one-electron and two-electron integrals within the defined active space. The integrals are then used to perform classical CCSD calculations, which give us t2 amplitudes that we use for parametrization of the LUCJ circuit. The LUCJ calculations return the bitstrings for each measurement, where these bitstrings correspond to electron configurations of the studied system.\n",
-    "\n",
-    "3. SQD section\n",
-    "\n",
-    "It takes as the input the PySCF Checkpoint file containing the HF IEF-PCM information, the bitstrings representing the electron configurations predicted by LUCJ, as well as the user-defined SQD options selected in the input section. As an output it produces the SQD IEF-PCM total energy of the lowest energy batch as well as the corresponding solvation free energy."
+    "This template, developed in collaboration with the Cleveland Clinic Foundation, encapsulates a workflow to calculate the ground state energy and solvation free energy of methanol molecule in implicit solvent [1]. These simulations are based on the sample-based quantum diagonalization (SQD) method [2-6] and the integral equation formalism polarizable continuum model (IEF-PCM) of solvent [7]. Here a methanol molecule is the solute, the electronic structure of which is simulated explicitly, and the solvent is water, approximated as a continuous dielectric medium. To account for the [electron correlation effects](https://onlinelibrary.wiley.com/doi/epdf/10.1002/ijch.202100111) in methanol, while maintaining the balance between the computational cost and accuracy, we only include the $\\sigma$, $\\sigma^{*}$, and lone pair orbitals in the active space simulated with SQD IEF-PCM. This orbital selection is done with [atomic valence active space (AVAS) method](https://github.com/pyscf/pyscf.github.io/blob/master/examples/mcscf/43-avas.py) using the C[2s,2p], O[2s,2p], and H[1s] atomic orbital components, which results in the active space of 14 electrons and 12 orbitals (14e,12o). The reference orbitals are calculated with closed-shell Hartree Fock using the cc-pvdz basis set."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "f3a337d1",
+   "id": "25d18ba5",
    "metadata": {},
    "source": [
-    "## Chemistry workflow introduction\n",
+    "## Workflow introduction\n",
     "\n",
-    "This template, developed in collaboration with the Cleveland Clinic Foundation, encapsulates a workflow to calculate the ground state energy and solvation free energy of methanol molecule in implicit solvent [1]. These simulations are based on the sample-based quantum diagonalization (SQD) method [2-6] and the integral equation formalism polarizable continuum model (IEF-PCM) of solvent [7]. Here a methanol molecule is the solute, the electronic structure of which is simulated explicitly, and the solvent is water, approximated as a continuous dielectric medium. To account for the [electron correlation effects](https://onlinelibrary.wiley.com/doi/epdf/10.1002/ijch.202100111) in methanol, while maintaining the balance between the computational cost and accuracy, we only include the $\\sigma$, $\\sigma^{*}$, and lone pair orbitals in the active space simulated with SQD IEF-PCM. This orbital selection is done with [atomic valence active space (AVAS) method](https://github.com/pyscf/pyscf.github.io/blob/master/examples/mcscf/43-avas.py) using the C[2s,2p], O[2s,2p], and H[1s] atomic orbital components, which results in the active space of 14 electrons and 12 orbitals (14e,12o). The reference orbitals are calculated with closed-shell Hartree Fock using the cc-pvdz basis set."
+    "\n",
+    "This interactive guide shows how to upload this function template to Qiskit Serverless and run an example workload. The template is composed of three stages described below:\n",
+    "\n",
+    "1. Collecting input and mapping the problem\n",
+    "\n",
+    "This section takes as an input the geometry of the molecule, selected active space, solvation model, LUCJ options, and SQD options. Subsequently it produces the PySCF Checkpoint file which contains the Hartree-Fock (HF) IEF-PCM data. This data will be used in the SQD portion of the workflow. For LUCJ portion of the workflow the input section also generates the gas-phase HF data which is stored internally in PySCF FCIDUMP format.\n",
+    "\n",
+    "It takes as the input the information from the HF gas-phase simulation as well as the definition of the active space. Importantly, it also utilizes the user-defined information from the input section concerning the error suppression, number of shots, circuit transpiler optimization level, and the qubit layout.\n",
+    "\n",
+    "It generates one-electron and two-electron integrals within the defined active space. The integrals are then used to perform classical CCSD calculations, which give us t2 amplitudes that we use for parametrization of the LUCJ circuit. \n",
+    "\n",
+    "\n",
+    "2. Executing the parametrized circuit\n",
+    "\n",
+    "The LUCJ calculations return the bitstrings for each measurement, where these bitstrings correspond to electron configurations of the studied system. The bitstrings will then be used as input for post-processing using the SQD addon.\n",
+    "\n",
+    "3. Post-processing using SQD\n",
+    "\n",
+    "It takes as the input the PySCF Checkpoint file containing the HF IEF-PCM information, the bitstrings representing the electron configurations predicted by LUCJ, as well as the user-defined SQD options selected in the input section. As an output it produces the SQD IEF-PCM total energy of the lowest energy batch as well as the corresponding solvation free energy."
    ]
   },
   {
@@ -63,7 +63,10 @@
    "source": [
     "### LUCJ options\n",
     "\n",
-    "The initial step of SQD method is the execution of LUCJ quantum circuit, which sample a set of computational basis states from the probability distribution of the molecular system. To achieve the balance between the depth of the LUCJ circuit and it is expressibility the qubits corresponding to the spin orbitals with the opposite spin have the two-qubit gates applied between them only in instances when these qubits are neighboring each other through single ancilla qubit. To implement this approach on IBM hardware with a heavy-hex topology, qubits representing the spin orbitals with the same spin are connected through a line topology where each line take a zig-zag shape due the heavy-hex connectivity of the target hardware, while the qubits representing the spin orbitals with the opposite spin only have connection at every 4th qubit.\n",
+    "The initial step of SQD method is the execution of LUCJ quantum circuit, which sample a set of computational basis states from the probability distribution of the molecular system. To achieve the balance between the depth of the LUCJ circuit and it is expressibility the qubits corresponding to the spin orbitals with the opposite spin have the two-qubit gates applied between them only in instances when these qubits are neighboring each other through single ancilla qubit. To implement this approach on IBM hardware with a heavy-hex topology, qubits representing the spin orbitals with the same spin are connected through a line topology where each line take a zig-zag shape due the heavy-hex connectivity of the target hardware, while the qubits representing the spin orbitals with the opposite spin only have a connection at every 4th qubit.\n",
+    "\n",
+    "<details>\n",
+    "<summary> Click for more details on the required options: </summary>\n",
     "\n",
     "The user has to provide the `initial_layout` array corresponding to the qubits that satisfy this [_zig-zag_ pattern](https://pubs.rsc.org/en/content/articlehtml/2023/sc/d3sc02516k) in the `lucj_options` section of the SQD IEF-PCM function. In case of SQD IEF-PCM (14e,12o)/cc-pvdz simulations of methanol we chose the initial qubit layout corresponding to the main diagonal of the Eagle R3 QPU. Here the first 12 elements of the `initial_layout` array `[0, 14, 18, 19, 20, 33, 39, 40, 41, 53, 60, 61, ...]` correspond to the alpha spin orbitals and the last 12 elements `[... 2, 3, 4, 15, 22, 23, 24, 34, 43, 44, 45, 54]` correspond to beta spin orbitals.\n",
     "\n",
@@ -75,7 +78,9 @@
     "- 200,000 shots for systems with 16 - 18 molecular orbitals\n",
     "- 200,000 - 2,000,000 shots for systems with more than 18 molecular orbitals\n",
     "\n",
-    "The required number of shots will be affected not only by the number of spin orbitals in the studied system, but also by the size of the Hilbert space corresponding to the selected active space within the studied system. Generally instances with smaller Hilbert spaces will require fewer shots. Other LUCJ options available to the user are [circuit transpiler optimization level](https://docs.quantum.ibm.com/guides/set-optimization) and [error suppresion options](https://docs.quantum.ibm.com/guides/configure-error-suppression), where these options are also going to affect the required number of shots and the resulting accuracy."
+    "The required number of shots will be affected not only by the number of spin orbitals in the studied system, but also by the size of the Hilbert space corresponding to the selected active space within the studied system. Generally instances with smaller Hilbert spaces will require fewer shots. Other LUCJ options available to the user are [circuit transpiler optimization level](https://docs.quantum.ibm.com/guides/set-optimization) and [error suppresion options](https://docs.quantum.ibm.com/guides/configure-error-suppression), where these options are also going to affect the required number of shots and the resulting accuracy.\n",
+    "\n",
+    "</details>"
    ]
   },
   {
@@ -84,11 +89,13 @@
    "metadata": {},
    "source": [
     "### SQD options\n",
-    "Most critical options in SQD simulations are the `sqd_iterations`, `number_of_batches`, and `samples_per_batch`. Generally, the lower number of samples per batch can be counteracted with more batches (`number_of_batches`) and more iterations of S-CORE (`sqd_iterations`).\n",
-    "- More batches allow user to sample more variations of the configurational subspaces. Since the lowest-energy batch is taken as the solution for the ground state energy of the system, higher number of batches can improve the results through better statistics.\n",
-    "- Additional iterations of S-CORE allow to recover more configurations from original LUCJ distribution if the number of samples in correct particle sector is low. This allows user to reduce the number of samples per batch.\n",
     "\n",
-    "Alternative strategy is to use the higher number of samples per batch, which ensures that most of the initial LUCJ samples in right particle space are used during the S-CORE procedure and individual subspaces encapsulate sufficient variety of electron configurations. In turn, this reduces the number of required S-CORE steps, where only 2 or 3 iterations of SQD are needed if number of samples per batch is large enough. However, more samples per batch results in higher computational cost of each diagonalization step. Hence, the balance between the accuracy and computational cost in SQD simulations can be achieved through optimal choice of `sqd_iterations`, `number_of_batches`, and `samples_per_batch` options.\n",
+    "The most important options in SQD simulations are the `sqd_iterations`, `number_of_batches`, and `samples_per_batch`. Generally, the lower number of samples per batch can be counteracted with more batches (`number_of_batches`) and more iterations of S-CORE (`sqd_iterations`). More batches allow user to sample more variations of the configurational subspaces. Since the lowest-energy batch is taken as the solution for the ground state energy of the system, higher number of batches can improve the results through better statistics. Additional iterations of S-CORE allow to recover more configurations from original LUCJ distribution if the number of samples in correct particle sector is low. This allows user to reduce the number of samples per batch.\n",
+    "\n",
+    "<details>\n",
+    "<summary> Click for more information on configuring the SQD options:</summary>\n",
+    "\n",
+    "An alternative strategy is to use a higher number of samples per batch, which ensures that most of the initial LUCJ samples in right particle space are used during the S-CORE procedure and individual subspaces encapsulate sufficient variety of electron configurations. In turn, this reduces the number of required S-CORE steps, where only 2 or 3 iterations of SQD are needed if number of samples per batch is large enough. However, more samples per batch results in higher computational cost of each diagonalization step. Hence, the balance between the accuracy and computational cost in SQD simulations can be achieved through optimal choice of `sqd_iterations`, `number_of_batches`, and `samples_per_batch` options.\n",
     "\n",
     "The [SQD IEF-PCM study](https://pubs.acs.org/doi/10.1021/acs.jpcb.5c01030) shows that when 3 iterations of S-CORE are used the chemical accuracy can be reached with:\n",
     "\n",
@@ -97,7 +104,9 @@
     "- 6000 samples per batch in water SQD IEF-PCM (8e,23o) simulations\n",
     "- 16000 samples per batch in ethanol SQD IEF-PCM (20e,18o) simulations\n",
     "\n",
-    "Just like the required number of shots in LUCJ, the required number of samples per batch used in S-CORE procedure is highly system- and hardware-dependent. The examples above can be used to estimate the initial point for the benchmark of required number of samples per batch. The tutorial on systematic benchmark of required number of sample per batch can be found [here](https://qiskit.github.io/qiskit-addon-sqd/how_tos/choose_subspace_dimension.html)."
+    "Just like the required number of shots in LUCJ, the required number of samples per batch used in S-CORE procedure is highly system- and hardware-dependent. The examples above can be used to estimate the initial point for the benchmark of required number of samples per batch. The tutorial on systematic benchmark of required number of sample per batch can be found [here](https://qiskit.github.io/qiskit-addon-sqd/how_tos/choose_subspace_dimension.html).\n",
+    "\n",
+    "</details>"
    ]
   },
   {
