--- a/docs/guides/function-template-hamiltonian-simulation.ipynb
+++ b/docs/guides/function-template-hamiltonian-simulation.ipynb
@@ -16,43 +16,13 @@
      "version-info"
     ]
    },
-   "source": [
-    "<details>\n",
-    "<summary><b>Package versions</b></summary>\n",
-    "\n",
-    "The code on this page was developed using the following requirements.\n",
-    "We recommend using these versions or newer.\n",
-    "\n",
-    "```\n",
-    "qiskit[all]~=1.2.4\n",
-    "qiskit-ibm-runtime~=0.32.0\n",
-    "qiskit-serverless~=0.18.0\n",
-    "qiskit-ibm-catalog~=0.2.0\n",
-    "```\n",
-    "</details>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5103c621-809d-48e9-ac86-2bf02916e2af",
-   "metadata": {},
-   "source": [
-    "By now you've seen a basic example of how to get started writing, uploading, and running a program with Qiskit Serverless. If you haven't, start with [What is Qiskit Serverless?](/docs/guides/serverless) for some background information first.\n",
-    "\n",
-    "The workloads you are building for your own use cases are likely not as simple as the examples previously shown. For example, you might need to carefully consider what domain-level inputs and outputs are relevant for your application, how to make sure your program can be reusable across a range of those inputs, and what kind of information you need returned during the execution of the job so you can better evaluate the progress of your workload. You might even want to incorporate a \"dry run\" mode so you can test the impact of a set of particular inputs before sending the resulting circuits to hardware.\n",
-    "\n",
-    "A function template is an example of a realistic workload that uses a specific application domain to contextualize these aspects. It is meant to be a starting point for you to modify for your own needs so you don't have to start from scratch.\n",
-    "\n",
-    "This guide demonstrates creating a function template for addressing Hamiltonian simulation problems."
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
    "id": "b51e81bf-0bbf-4f64-af1e-87fcb443d997",
    "metadata": {},
    "source": [
-    "### Physics workflow\n",
-    "\n",
     "This template encapsulates a workflow to simulate the time evolution of an initial state against a user defined spin-based Hamiltonian and returns a set of specified expectation values using the [AQC addon](./qiskit-addons-aqc). A demonstration of deploying and running this template can be found as a Jupyter notebook in the [project's directory](https://github.com/qiskit-community/qiskit-function-templates/blob/main/physics/hamiltonian_simulation/deploy_and_run.ipynb).\n",
     "\n",
     "Similar to the chemistry workflow it is also divided into several sections:\n",
@@ -61,7 +31,7 @@
     "\n",
     "This section takes as an input the Hamiltonian to simulate, an initial state in the form of a `QuantumCircuit`, a set of observables to estimate expectation values, and a specification of options for the AQC addon. This step validates that all required input data is present and that they are in the correct format. An [`EstimatorV2`](../api/qiskit-ibm-runtime/estimator-v2) instance is created with a default set of error mitigation options.\n",
     "\n",
-    "2. Mapping\n",
+    "2. Mapping and pre-processing\n",
     "\n",
     "The input arguments are then used to construct the relevant quantum circuits and operators for the workflow. A target circuit is created and a matrix product state representation of this circuit is found using the AQC addon. Following this, an ansatz circuit is generated and optimized using tensor network methods, producing a final circuit which executes the remainder of the time evolution.\n",
     "\n",
@@ -104,7 +74,7 @@
    "id": "115c14aa-5028-46f9-ab19-b49d47519636",
    "metadata": {},
    "source": [
-    "### Get the domain-level inputs\n",
+    "### Collect and validate the inputs\n",
     "\n",
     "Start by getting the inputs for the template. This example has domain-specific inputs relevant for Hamiltonian simulation (such as the Hamiltonian and observable) and capability-specific options (such as how much you want to compress the initial layers of the Trotter circuit using AQC-Tensor, or advanced options for fine-tuning error suppression and mitigation beyond the defaults that are part of this example)."
    ]
@@ -243,7 +213,7 @@
    "id": "fb65718c-8837-4610-87b7-59e6dc7abb80",
    "metadata": {},
    "source": [
-    "### Validate the inputs\n",
+    "#### Validate the inputs\n",
     "\n",
     "An important aspect of ensuring that the template can be reused across a range of inputs is input validation. The following code is an example of verifying that the stopping fidelity during AQC-Tensor has been specified appropriately and if not, returning an informative error message for how to fix the error."
    ]
@@ -278,7 +248,7 @@
    "id": "0e5495ee-82e2-43dc-bca7-f8e81f8b6302",
    "metadata": {},
    "source": [
-    "### Perform the Hamiltonian simulation workflow using AQC-Tensor\n",
+    "#### Prepare the function outputs\n",
     "\n",
     "First, prepare a dictionary to hold all of the function template outputs. Keys will be added to this dictionary throughout the workflow, and it is returned at the end of the program."
    ]
@@ -308,7 +278,7 @@
    "id": "3acd5522-a880-4de7-9251-2d68efc261ad",
    "metadata": {},
    "source": [
-    "#### Step 1: Map\n",
+    "### Map the problem and pre-process the circuit with AQC\n",
     "\n",
     "The AQC-Tensor optimization happens in step 1 of a Qiskit pattern.  First, a target state is constructed.  In this example, it is constructed from a target circuit that evolves the same Hamiltonian for the same time period as the AQC portion.  Then, an ansatz is generated from an equivalent circuit but with fewer Trotter steps.  In the main portion of the AQC algorithm, that ansatz is iteratively brought closer to the target state.  Finally, the result is combined with the remainder of the Trotter steps needed to reach the desired evolution time.\n",
     "\n",
@@ -450,7 +420,7 @@
    "id": "ae8e53a6-2106-4753-ad1a-ebc146cd44ab",
    "metadata": {},
    "source": [
-    "#### Step 2: Optimize\n",
+    "### Optimize the final circuit for execution\n",
     "\n",
     "After the AQC portion of the workflow, the `final_circuit` is [transpiled for the hardware](/docs/guides/transpile#instruction-set-architecture) as usual."
    ]
@@ -529,7 +499,7 @@
    "id": "3a603817-abaf-4403-beea-cca838a59577",
    "metadata": {},
    "source": [
-    "#### Step 3: Execute on hardware"
+    "#### Execute the circuit on hardware"
    ]
   },
   {
@@ -611,21 +581,12 @@
    "id": "220f8bc8-4f04-41d3-86f1-15e9c2f45a56",
    "metadata": {},
    "source": [
-    "## Deploy to IBM Quantum Platform\n",
-    "<LegacyContent>\n",
-    "The previous section created a program to be run remotely. The code in this section uploads that program to Qiskit Serverless.\n",
-    "\n",
-    "Use `qiskit-ibm-catalog` to authenticate to `QiskitServerless` with your API key, which you can find in your [IBM Quantum&reg; account](https://quantum.ibm.com/account), and upload the program.\n",
-    "\n",
-    "You can optionally use `save_account()` to save your credentials (see the [\"Authenticate to the service\" step](/docs/guides/setup-channel#save-account)) in the Set up to use IBM Quantum Platform guide. Note that this writes your credentials to the same file as [`QiskitRuntimeService.save_account()`.](/docs/api/qiskit-ibm-runtime/qiskit-runtime-service#save_account)\n",
-    "</LegacyContent>\n",
-    "<CloudContent>\n",
+    "## Deploy the function to IBM Quantum Platform\n",
     "The previous section created a program to be run remotely. The code in this section uploads that program to Qiskit Serverless.\n",
     "\n",
     "Use `qiskit-ibm-catalog` to authenticate to `QiskitServerless` with your API key, which you can find on the [IBM Quantum Platform](https://quantum.cloud.ibm.com) dashboard, and upload the program.\n",
     "\n",
-    "You can optionally use `save_account()` to save your credentials (see the [Set up your IBM Cloud account](/docs/guides/cloud-setup#cloud-save) guide). Note that this writes your credentials to the same file as [`QiskitRuntimeService.save_account()`.](/docs/api/qiskit-ibm-runtime/qiskit-runtime-service#save_account)\n",
-    "</CloudContent>"
+    "You can optionally use `save_account()` to save your credentials (see the [Set up your IBM Cloud account](/docs/guides/cloud-setup#cloud-save) guide). Note that this writes your credentials to the same file as [`QiskitRuntimeService.save_account()`.](/docs/api/qiskit-ibm-runtime/qiskit-runtime-service#save_account)"
    ]
   },
   {
@@ -694,7 +655,7 @@
    "id": "06677105-627a-4948-aac7-071f44327a0b",
    "metadata": {},
    "source": [
-    "To check if the program successfully uploaded, use `serverless.list()`:"
+    "Finally, check if the program successfully uploaded, use `serverless.list()`:"
    ]
   },
   {
@@ -1405,7 +1366,6 @@
     "hw_expvals = [pub_result_data[\"evs\"].tolist() for pub_result_data in hw_results_dicts]\n",
     "\n",
     "# Save expectation values to Qiskit Serverless\n",
-    "print(\"Hardware expectation values\", hw_expvals)\n",
     "output[\"hw_expvals\"] = hw_expvals[0]\n",
     "\n",
     "save_result(output)"
