--- a/docs/guides/functions.ipynb
+++ b/docs/guides/functions.ipynb
@@ -55,7 +55,7 @@
    "id": "5e5b0531-f286-4573-8b1e-664ca5496d2d",
    "metadata": {},
    "source": [
-    "Functions are provided by IBM&reg; and third-party partners. Each is performant for specific workload characteristics and have unique performance-tuning options. Premium Plan users can get started with IBM Qiskit Functions for free, or procure a license from one of the partners who have contributed a function to the catalog.\n",
+    "Functions are provided by IBM&reg; and third-party partners. Each is performant for specific workload characteristics and have unique performance-tuning options. Premium and Flex plan users can get started with IBM Qiskit Functions for free, or procure a license from one of the partners who have contributed a function to the catalog.\n",
     "\n",
     "## Get started with Qiskit Functions\n",
     "\n",
@@ -63,10 +63,15 @@
     "\n",
     "To request a new free trial, navigate to the [Qiskit Functions Catalog](https://quantum.cloud.ibm.com/functions), and explore the details panel. Click on `Request a free trial` and fill out information required by the Functions partner, including the IBM Cloud `AccessGroupId`:\n",
     "\n",
-    "- Navigate to [IBM Cloud IAM](http://cloud.ibm.com/iam/groups)\n",
-    "- Click into a Group name\n",
-    "- Click Details\n",
-    "- Copy the Access Group ID. It should start with `AccessGroup-`\n",
+    "1. Navigate to [IBM Cloud IAM](http://cloud.ibm.com/iam/groups)\n",
+    "2. Checking eligibility\n",
+    "   - Switch your Account in the top bar to one with the following format: `XXXXXXX - [Organization Name]`\n",
+    "   - Please ensure the organization is the same as the one associated with your premium account to get access.\n",
+    "   - If you see \"[Your Name]'s Account\", it means you are using your personal account which will not be eligible to the access.\n",
+    "3. Finding your Access Group ID\n",
+    "   - Click into a Group name\n",
+    "   - Click Details\n",
+    "   - Copy the Access Group ID. It should start with `AccessGroup-`\n",
     "\n",
     "### Install Qiskit Functions Catalog client\n",
     "\n",
