--- a/docs/guides/functions.ipynb
+++ b/docs/guides/functions.ipynb
@@ -64,7 +64,7 @@
     "To request a new free trial, navigate to the [Qiskit Functions Catalog](https://quantum.cloud.ibm.com/functions), and explore the details panel. Click on `Request a free trial` and fill out information required by the Functions partner, including the IBM Cloud `AccessGroupId`:\n",
     "\n",
     "1. Navigate to [IBM Cloud IAM](http://cloud.ibm.com/iam/groups)\n",
-    "2. Checking eligibility\n",
+    "2. Verify eligibility.\n"
     "   - Switch your Account in the top bar to one with the following format: `XXXXXXX - [Organization Name]`\n",
     "   - Please ensure the organization is the same as the one associated with your premium account to get access.\n",
     "   - If you see \"[Your Name]'s Account\", it means you are using your personal account which will not be eligible to the access.\n",
