--- a/docs/guides/functions.ipynb
+++ b/docs/guides/functions.ipynb
@@ -67,7 +67,7 @@
     "2. Verify eligibility.\n"
     "   - Switch your Account in the top bar to one with the following format: `XXXXXXX - [Organization Name]`\n",
     "   - Please ensure the organization is the same as the one associated with your premium account to get access.\n",
-    "   - If you see \"[Your Name]'s Account\", it means you are using your personal account which will not be eligible to the access.\n",
+    "   - If you see \"[Your Name]'s Account\", you are using your _personal_ account, which is not eligible for premium access.\n",
     "3. Finding your Access Group ID\n",
     "   - Click into a Group name\n",
     "   - Click Details\n",
