--- a/docs/guides/functions.ipynb
+++ b/docs/guides/functions.ipynb
@@ -68,7 +68,7 @@
     "   - Switch your account in the top bar to one with the following format: `XXXXXXX - [Organization Name]`\n",
     "   - Ensure the organization is the same as the one associated with your premium account.\n",
     "   - If you see \"[Your Name]'s Account\", you are using your _personal_ account, which is not eligible for premium access.\n",
-    "3. Finding your Access Group ID\n",
+    "3. Finding your access group ID.\n",
     "   - Click into a Group name\n",
     "   - Click Details\n",
     "   - Copy the Access Group ID. It should start with `AccessGroup-`\n",
