--- a/docs/guides/functions.ipynb
+++ b/docs/guides/functions.ipynb
@@ -71,7 +71,7 @@
     "3. Finding your access group ID.\n",
     "   1. Click a group name.\n",
     "   - Click Details\n",
-    "   - Copy the Access Group ID. It should start with `AccessGroup-`\n",
+    "   3. Copy the access group ID. It should start with `AccessGroup-`.\n",
     "\n",
     "### Install Qiskit Functions Catalog client\n",
     "\n",
