--- a/docs/guides/functions.ipynb
+++ b/docs/guides/functions.ipynb
@@ -63,15 +63,15 @@
     "\n",
     "To request a new free trial, navigate to the [Qiskit Functions Catalog](https://quantum.cloud.ibm.com/functions), and explore the details panel. Click on `Request a free trial` and fill out information required by the Functions partner, including the IBM Cloud `AccessGroupId`:\n",
     "\n",
-    "1. Navigate to [IBM Cloud IAM](http://cloud.ibm.com/iam/groups)\n",
+    "1. Navigate to [IBM Cloud IAM.](http://cloud.ibm.com/iam/groups)\n",
     "2. Verify eligibility.\n",
     "   - Switch your account in the top bar to one with the following format: `XXXXXXX - [Organization Name]`\n",
-    "   - Ensure the organization is the same as the one associated with your premium account.\n",
+    "   - Ensure the organization is the same as the one associated with your Premium account.\n",
     "   - If you see \"[Your Name]'s Account\", you are using your _personal_ account, which is not eligible for premium access.\n",
-    "3. Finding your access group ID.\n",
-    "   1. Click a group name.\n",
-    "   2. Click **Details**.\n",
-    "   3. Copy the access group ID. It should start with `AccessGroup-`.\n",
+    "3. Find your access group ID.\n",
+    "   - Click a group name.\n",
+    "   - Click **Details**.\n",
+    "   - Copy the access group ID. It should start with `AccessGroup-`.\n",
     "\n",
     "### Install Qiskit Functions Catalog client\n",
     "\n",
