--- a/docs/faq.mdx
+++ b/docs/faq.mdx
@@ -49,11 +49,11 @@ Example of citing IBM Quantum Composer:
 
 ## I'm an administrator but I can't access my administration tasks.
 
-Try choosing a different account from the account switcher in the top header of the [IBM Quantum Platform interface](https://quantum.cloud.ibm.com).
+Try choosing a different account from the account switcher in the header of the [IBM Quantum Platform interface](https://quantum.cloud.ibm.com).
 
 ## I don't see something in the user interface.
 
-Try choosing a different account from the account switcher in the top header of the [IBM Quantum Platform interface](https://quantum.cloud.ibm.com).
+Try choosing a different account from the account switcher in the header of the [IBM Quantum Platform interface](https://quantum.cloud.ibm.com).
 
 ## I'm just using the Open Plan, but I had to put in my credit card.  Will I be charged?
 
