--- a/docs/guides/instances.ipynb
+++ b/docs/guides/instances.ipynb
@@ -85,7 +85,7 @@
     "<span id=\"add-instance\"></span>\n",
     "## Add an instance\n",
     "\n",
-    "1. To add an instance to your account, first ensure you have the correct account and region selected in the account switcher in the top header.\n",
+    "1. To add an instance to your account, first ensure you have the correct account and region selected in the account switcher in the header.\n",
     "   <span id=\"regions\"></span>\n",
     "   <Admonition type=\"note\" title=\"About regions\">\n",
     "   The instance will be created in the selected region. This region determines these important characteristics:\n",
