--- a/docs/guides/cloud-setup.mdx
+++ b/docs/guides/cloud-setup.mdx
@@ -26,16 +26,16 @@ Your user account is associated with one or more [instances](./instances), ident
 
 1. If you do not already have one, set up an [IBM Cloud account.](https://quantum.cloud.ibm.com/registration)
    <Admonition type="note">
-   You can have multiple IBM Cloud accounts.  You can access any of your IBM Cloud accounts at any time from the account switcher in the top header of the [IBM Quantum Platform interface](https://quantum.cloud.ibm.com).
+   You can have multiple IBM Cloud accounts.  You can access any of your IBM Cloud accounts at any time from the account switcher in the header of the [IBM Quantum Platform interface](https://quantum.cloud.ibm.com).
    </Admonition>
 
 ### 1. Create an instance
 
     Go to the [IBM Quantum Platform dashboard.](https://quantum.cloud.ibm.com) If you have one or more instances shown, skip this step. Otherwise, follow these steps to create an instance.
 
-    1. Make sure that you have the correct account and region are selected from the account and region switchers in the top header.
+    1. Make sure that you have the correct account and region are selected from the account and region switchers in the header.
 
-        The region controls where your jobs are run and where the jobs' data is kept. You can access either region by using the same API key, but you can only see and access the instances that were created in the region that you're logged in to.
+        The region controls where your jobs are run and where the job data is kept. You can access either region by using the same API key, but you can only see and access the instances that were created in the region that you're logged in to.
     1. Click **Create instance**.
          * Choose a name and the plan to use.
          * If you are creating an instance of the Standard Plan, it is recommended that you set the total cost limit or the usage limit. (These values can be updated later.)
