Apply suggestions from code review
Co-authored-by: Jen Glick <41485571+jenglick@users.noreply.github.com>

--- a/docs/guides/function-template-chemistry-workflow.ipynb
+++ b/docs/guides/function-template-chemistry-workflow.ipynb
@@ -36,24 +36,24 @@
     "## Workflow introduction\n",
     "\n",
     "\n",
-    "This interactive guide shows how to upload this function template to Qiskit Serverless and run an example workload. The template is composed of three stages described below:\n",
+    "This interactive guide shows how to upload this function template to Qiskit Serverless and run an example workload. The template is structured as a Qiskit pattern with four steps:\n",
     "\n",
     "1. Collecting input and mapping the problem\n",
     "\n",
-    "This section takes as an input the geometry of the molecule, selected active space, solvation model, LUCJ options, and SQD options. Subsequently it produces the PySCF Checkpoint file which contains the Hartree-Fock (HF) IEF-PCM data. This data will be used in the SQD portion of the workflow. For LUCJ portion of the workflow the input section also generates the gas-phase HF data which is stored internally in PySCF FCIDUMP format.\n",
+    "This step takes as an input the geometry of the molecule, selected active space, solvation model, LUCJ options, and SQD options. Subsequently, it produces the PySCF Checkpoint file which contains the Hartree-Fock (HF) IEF-PCM data. This data will be used in the SQD portion of the workflow. For LUCJ portion of the workflow the input section also generates the gas-phase HF data which is stored internally in PySCF FCIDUMP format.\n",
     "\n",
     "It takes as the input the information from the HF gas-phase simulation as well as the definition of the active space. Importantly, it also utilizes the user-defined information from the input section concerning the error suppression, number of shots, circuit transpiler optimization level, and the qubit layout.\n",
     "\n",
     "It generates one-electron and two-electron integrals within the defined active space. The integrals are then used to perform classical CCSD calculations, which give us t2 amplitudes that we use for parametrization of the LUCJ circuit.\n",
     "\n",
     "\n",
-    "2. Executing the parametrized circuit\n",
+    "3. Executing the circuit\n",
     "\n",
     "The LUCJ calculations return the bitstrings for each measurement, where these bitstrings correspond to electron configurations of the studied system. The bitstrings will then be used as input for post-processing using the SQD addon.\n",
     "\n",
     "3. Post-processing using SQD\n",
     "\n",
-    "It takes as the input the PySCF Checkpoint file containing the HF IEF-PCM information, the bitstrings representing the electron configurations predicted by LUCJ, as well as the user-defined SQD options selected in the input section. As an output it produces the SQD IEF-PCM total energy of the lowest energy batch as well as the corresponding solvation free energy."
+    "This final step takes as the input the PySCF Checkpoint file containing the HF IEF-PCM information, the bitstrings representing the electron configurations predicted by LUCJ, as well as the user-defined SQD options selected in the input section. As an output it produces the SQD IEF-PCM total energy of the lowest energy batch as well as the corresponding solvation free energy."
    ]
   },
   {
@@ -63,7 +63,7 @@
    "source": [
     "### LUCJ options\n",
     "\n",
-    "The initial step of SQD method is the execution of LUCJ quantum circuit, which sample a set of computational basis states from the probability distribution of the molecular system. To achieve the balance between the depth of the LUCJ circuit and it is expressibility the qubits corresponding to the spin orbitals with the opposite spin have the two-qubit gates applied between them only in instances when these qubits are neighboring each other through single ancilla qubit. To implement this approach on IBM hardware with a heavy-hex topology, qubits representing the spin orbitals with the same spin are connected through a line topology where each line take a zig-zag shape due the heavy-hex connectivity of the target hardware, while the qubits representing the spin orbitals with the opposite spin only have a connection at every 4th qubit.\n",
+    "Execution of the LUCJ quantum circuit produces a set of samples representing the computational basis states from the probability distribution of the molecular system. To achieve the balance between the depth of the LUCJ circuit and its expressibility, the qubits corresponding to the spin orbitals with the opposite spin have the two-qubit gates applied between them only in instances when these qubits are neighboring each other through single ancilla qubit. To implement this approach on IBM hardware with a heavy-hex topology, qubits representing the spin orbitals with the same spin are connected through a line topology where each line take a zig-zag shape due the heavy-hex connectivity of the target hardware, while the qubits representing the spin orbitals with the opposite spin only have a connection at every 4th qubit.\n",
     "\n",
     "<details>\n",
     "<summary> Click for more details on the required options: </summary>\n",
@@ -90,7 +90,7 @@
    "source": [
     "### SQD options\n",
     "\n",
-    "The most important options in SQD simulations are the `sqd_iterations`, `number_of_batches`, and `samples_per_batch`. Generally, the lower number of samples per batch can be counteracted with more batches (`number_of_batches`) and more iterations of S-CORE (`sqd_iterations`). More batches allow user to sample more variations of the configurational subspaces. Since the lowest-energy batch is taken as the solution for the ground state energy of the system, higher number of batches can improve the results through better statistics. Additional iterations of S-CORE allow to recover more configurations from original LUCJ distribution if the number of samples in correct particle sector is low. This allows user to reduce the number of samples per batch.\n",
+    "Important options in SQD simulations include the `sqd_iterations`, `number_of_batches`, and `samples_per_batch`. Generally, the lower number of samples per batch can be counteracted with more batches (`number_of_batches`) and more iterations of S-CORE (`sqd_iterations`). More batches means we can sample more variations of the configurational subspaces. Since the lowest-energy batch is taken as the solution for the ground state energy of the system, a higher number of batches can improve the results through better statistics. Additional iterations of S-CORE allows more configurations to be recovered from original LUCJ distribution if the number of samples in correct particle sector is low. This can allow the number of samples per batch to be reduced.\n",
     "\n",
     "<details>\n",
     "<summary> Click for more information on configuring the SQD options:</summary>\n",
@@ -165,7 +165,7 @@
     }
    },
    "source": [
-    "### Upload the custom function"
+    "### Upload the template"
    ]
   },
   {
@@ -273,7 +273,7 @@
    "id": "99408586",
    "metadata": {},
    "source": [
-    "## Load and run the custom function remotely"
+    "## Load and run the template remotely"
    ]
   },
   {
@@ -588,7 +588,7 @@
      "text": [
       "2025-06-27 08:42:41,358\tINFO job_manager.py:531 -- Runtime env is setting up.\n",
       "sqd_pcm_entrypoint.run_function:INFO:2025-06-27 08:42:45,015: Starting runtime service\n",
-      "sqd_pcm_entrypoint.run_function:INFO:2025-06-27 08:42:45,621: Backend: test_eagle_us-east\n",
+      "sqd_pcm_entrypoint.run_function:INFO:2025-06-27 08:42:45,621: Backend: ibm_sherbrooke\n",
       "sqd_pcm_entrypoint.run_function:INFO:2025-06-27 08:42:46,809: Initializing molecule object\n",
       "sqd_pcm_entrypoint.run_function:INFO:2025-06-27 08:42:51,599: Performing CCSD\n",
       "Parsing /tmp/ray/session_2025-06-27_08-42-13_898146_1/runtime_resources/working_dir_files/_ray_pkg_4bc93dcc58c04b91/output_sqd_pcm/2025-06-27_08-42-45.fcidump.txt\n",
