--- a/docs/guides/function-template-hamiltonian-simulation.ipynb
+++ b/docs/guides/function-template-hamiltonian-simulation.ipynb
@@ -23,9 +23,9 @@
    "id": "b51e81bf-0bbf-4f64-af1e-87fcb443d997",
    "metadata": {},
    "source": [
-    "This template encapsulates a workflow to simulate the time evolution of an initial state against a user defined spin-based Hamiltonian and returns a set of specified expectation values using the [AQC addon](./qiskit-addons-aqc). A demonstration of deploying and running this template can be found as a Jupyter notebook in the [project's directory](https://github.com/qiskit-community/qiskit-function-templates/blob/main/physics/hamiltonian_simulation/deploy_and_run.ipynb).\n",
+    "This template encapsulates a workflow to simulate the time evolution of an initial state against a user defined spin-based Hamiltonian and returns a set of specified expectation values using the [AQC addon](./qiskit-addons-aqc).\n",
     "\n",
-    "Similar to the chemistry workflow it is also divided into several sections:\n",
+    "This template is structured as a Qiskit pattern with the following steps:\n",
     "\n",
     "1. Input validation\n",
     "\n",
